--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,8 +3,18 @@
         <title>
             Article One
         </title>
+        <meta name="viewport" content="width-device-width, initial-scale=1"/>
+        <style>
+            .container {
+                mac-width: 800px;
+                margin: 0 outo;
+                color: grey;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div> 
@@ -23,7 +33,7 @@
             <p>
                This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article.
             </p>
-           </div>
-        
+            </div>
+            </div>
     </body>
 </html>
