[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width-device-width, initial-scale=1"/>
         <style>
             .container {
-                mac-width: 800px;
-                margin: 0 outo;
+                max-width: 800px;
+                margin: 0 cuto;
                 color: grey;
                 font-family: sans-serif;
             }
