--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,7 @@
             .container {
                     max-width: 800px;
                     margin: 0 auto;
-                    color: grey;
+                    color: #3c1313;
                     font-family: sans-serif;
                     padding-top: 60px;
                     padding-left: 20px;
