[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,8 +5,10 @@
 
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
+        <div class="container">
+         <div>
+                <a href="/">Home</a>
+         </div>
         </div>
     </body>
 </html>
