--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,9 @@
 		This is a new heading.
 </h4>
         </div>
+        <script>
+            alert("Hi,I\'m Javascript");
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
