--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div class="center" text="big bold">
             Hi! I am Nazia Fathima and this is my first webapp.
 	<h4>
 		This is a new heading.
