--- a/ui/index.html
+++ b/ui/index.html
@@ -4,19 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="madi" class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div class = "container">
+            <div id="madi" class="center">
+                <img src="/ui/https://static.pexels.com/photos/47258/pexels-photo-47258.jpeg" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3> Personal</h3>
+            <div> 
+                 Hi. My name is Nazia.
+            </div>
+            <h3> Personal</h3>
+            <div> 
+                 I work as a freelancer.
+            </div>
+            <hr/>
+            <div class = "footer">
+                
+            </div>
         </div>
-        <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am Nazia Fathima and this is my first webapp.
-	<h4>
-		This is a new heading.
-</h4>
-        </div>
-        <script>
-            alert("Hi,I\'m Javascript");
-        </script>
+       
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
