[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class = "container">
             <div id="madi" class="center">
-                <img src="/ui/https://static.pexels.com/photos/47258/pexels-photo-47258.jpeg" class="img-medium"/>
+                <img src="https://static.pexels.com/photos/47258/pexels-photo-47258.jpeg" class="img-medium"/>
             </div>
             <hr/>
             <br>
