[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,8 +14,9 @@
             <div> 
                  Hi. My name is Nazia.
             </div>
-            <h3> Personal</h3>
             <hr/>
+            
+            <h3> Professional</h3>
             <div> 
                  I work as a freelancer.
             </div>
